--- a/mobile/src/main/res/drawable/side_nav_bar.xml
+++ b/mobile/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,15 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <gradient
-        android:angle="135"
-        android:centerColor="#4CAF50"
-        android:endColor="#2E7D32"
-        android:startColor="#81C784"
-        android:type="linear" />
-</shape>
+<?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:drawable="@drawable/nav_header_background" />
+    <item>
+        <shape android:shape="rectangle">
+            <gradient
+                android:angle="135"
+                android:type="linear" />
+        </shape>
+    </item>
+</layer-list>
+
+
+
+
