--- a/mobile/src/main/res/layout/app_bar_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/app_bar_pantalla_principal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.david.socialsport.Pantallas.PantallaPrincipal">
+    tools:context="com.david.socialsport.Pantallas.Principal">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
