--- a/mobile/src/main/res/layout/content_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/content_pantalla_principal.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.david.socialsport.Pantallas.PantallaPrincipal"
+    tools:context="com.david.socialsport.Pantallas.Principal"
     tools:showIn="@layout/app_bar_pantalla_principal">
 
 </android.support.constraint.ConstraintLayout>
