--- a/mobile/src/main/res/layout/content_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/content_pantalla_principal.xml
@@ -8,4 +8,10 @@
     tools:context="com.david.socialsport.Pantallas.Principal"
     tools:showIn="@layout/app_bar_pantalla_principal">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@id/tab_layout" />
+
 </android.support.constraint.ConstraintLayout>
