--- a/mobile/src/main/res/layout/activity_crear_evento.xml
+++ b/mobile/src/main/res/layout/activity_crear_evento.xml
@@ -13,27 +13,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <EditText
+                android:id="@+id/crear_deporte"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="paco" />
+                android:hint="Deporte"/>
 
 
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/segunda"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:layout_below="@+id/primera"
             android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
-                android:layout_width="200dp"
+                android:layout_width="300dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
@@ -41,18 +42,21 @@
                 android:layout_marginBottom="5dp" >
             <fragment
                 android:id="@+id/place_autocomplete_fragment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
                 android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                 />
             </android.support.v7.widget.CardView>
 
             <Button
                 android:id="@+id/mostraMapa"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
                 android:layout_weight="0.5"
-                android:text="Mapa" />
+                android:background="@drawable/maps_icon"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:paddingLeft="5dp"/>
 
 
         </LinearLayout>
@@ -60,10 +64,11 @@
         <LinearLayout
             android:id="@+id/mapa"
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_height="350dp"
             android:layout_below="@+id/segunda"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp">
+            android:paddingRight="5dp"
+            android:orientation="vertical">
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -71,7 +76,7 @@
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="match_parent"
                 tools:context="com.david.socialsport.Pantallas.CrearEvento" />
         </LinearLayout>
 
@@ -80,13 +85,49 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/mapa"
             android:layout_margin="5dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <EditText
+                android:id="@+id/crear_tipo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="paco" />
+                android:hint="Interior/Exterior" />
+            <EditText
+                android:id="@+id/crear_coste"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:hint="Precio" />
+
+            <EditText
+                android:id="@+id/crear_fecha"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:hint="10/06/1991" />
+
+
+            <EditText
+                android:id="@+id/crear_hora"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:hint="22:00" />
+
+            <EditText
+                android:id="@+id/crear_comentario"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:hint="Comentario"
+                />
+            <Button
+                android:id="@+id/crear_aceptar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="4"
+                android:text="Aceptar" />
 
 
         </LinearLayout>
