--- a/mobile/src/main/res/layout/activity_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/activity_pantalla_principal.xml
@@ -6,7 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start">
+    tools:openDrawer="start"
+    android:background="@color/verdeFondo"
+    >
 
     <include
         layout="@layout/app_bar_pantalla_principal"
