--- a/mobile/src/main/res/layout/content_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/content_pantalla_principal.xml
@@ -13,5 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:layout_below="@id/tab_layout" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/deporte2"/>
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
