--- a/mobile/src/main/res/layout/tab_fragment_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_eventos.xml
@@ -1,7 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refrescar_eventos"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Pantallas.Principal"
+    android:background="@color/verdeFondo">
 
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/listaEventos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:dividerHeight="10dp" />
+
+    <TextView
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lo sentimos, aún no disponemos de ningún evento con esas características" />
+
+</android.support.v4.widget.SwipeRefreshLayout>
