--- a/mobile/src/main/res/values/colors.xml
+++ b/mobile/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#00695C</color>
+    <color name="colorPrimaryDark">#00695C</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="verdeFondo">#00897B</color>
+    <color name="verdeTimeLine">#00796B</color>
+    <color name="verdeAppBar">#00695C</color>
+    <color name="blancoTransparente">#83ffffff</color>
 </resources>
