--- a/mobile/src/main/res/drawable/redondeo_layout.xml
+++ b/mobile/src/main/res/drawable/redondeo_layout.xml
@@ -8,6 +8,6 @@
         android:bottomLeftRadius="10dp"
         android:topLeftRadius="10dp"
         android:topRightRadius="10dp"
-        android:background="@color/blancoTransparente"
+        android:background="@color/transparente"
         />
 </shape>
