--- a/mobile/src/main/res/layout/activity_ver_evento.xml
+++ b/mobile/src/main/res/layout/activity_ver_evento.xml
@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="15dp"
-    android:layout_marginTop="10dp"
-    android:background="@drawable/redondeo_layout"
-    android:paddingBottom="10dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
-    android:paddingTop="10dp"
-    android:id="@+id/verEvento">
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/verdeFondo">
+
 
         <ImageView
             android:id="@+id/evento_icono"
@@ -21,7 +14,7 @@
             app:srcCompat="@android:drawable/sym_def_app_icon" />
 
         <TextView
-            android:id="@+id/evento_deporte"
+            android:id="@+id/evento_ver_deporte"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="60dp"
@@ -103,5 +96,4 @@
             android:textColor="@color/tw__solid_white"
             android:textSize="15dp" />
 
-
-</RelativeLayout>
+</LinearLayout>
