--- a/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
@@ -1,7 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refrescar_mis_eventos"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".Pantallas.Principal"
+    android:background="@color/verdeFondo">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-</RelativeLayout>
+    <ListView
+        android:id="@+id/listaMisEventos"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:dividerHeight="10dp"
+        android:divider="@color/transparente" />
+
+    <TextView
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:id="@android:id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Aún no te has suscrito a ningún evento" />
+
+    </RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
