--- a/mobile/src/main/res/layout/activity_crear_evento.xml
+++ b/mobile/src/main/res/layout/activity_crear_evento.xml
@@ -15,12 +15,12 @@
             android:layout_margin="5dp"
             android:orientation="vertical">
 
-            <EditText
+            <AutoCompleteTextView
                 android:id="@+id/crear_deporte"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_weight="4"
-                android:hint="Deporte"/>
+                android:hint="@string/deporte"/>
 
 
         </LinearLayout>
@@ -39,25 +39,25 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp" >
-            <fragment
-                android:id="@+id/place_autocomplete_fragment"
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                />
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp">
+
+                <fragment
+                    android:id="@+id/place_autocomplete_fragment"
+                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                    android:layout_width="fill_parent"
+                    android:layout_height="match_parent" />
             </android.support.v7.widget.CardView>
 
             <Button
                 android:id="@+id/mostraMapa"
                 android:layout_width="fill_parent"
                 android:layout_height="50dp"
-                android:layout_weight="0.5"
-                android:background="@drawable/maps_icon"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
-                android:paddingLeft="5dp"/>
+                android:layout_weight="0.5"
+                android:background="@drawable/maps_icon"
+                android:paddingLeft="5dp" />
 
 
         </LinearLayout>
@@ -67,9 +67,9 @@
             android:layout_width="fill_parent"
             android:layout_height="350dp"
             android:layout_below="@+id/segunda"
+            android:orientation="vertical"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:orientation="vertical">
+            android:paddingRight="5dp">
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:map="http://schemas.android.com/apk/res-auto"
@@ -94,21 +94,23 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:hint="Interior/Exterior" />
+
             <EditText
                 android:id="@+id/crear_coste"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
                 android:hint="Precio"
-                android:inputType="numberDecimal"/>
+                android:inputType="numberDecimal" />
+
 
             <EditText
                 android:id="@+id/crear_fecha"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="10/06/1991"
-                android:inputType="date"/>
+                android:inputType="date"
+                android:onClick="showDatePickerDialog" />
 
 
             <EditText
@@ -116,16 +118,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="22:00"
-                android:inputType="time"/>
+                android:inputType="time"
+
+                android:onClick="showTimePickerDialog" />
 
             <EditText
                 android:id="@+id/crear_comentario"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:hint="Comentario"
-                />
+                android:hint="Comentario" />
+
             <Button
                 android:id="@+id/crear_aceptar"
                 android:layout_width="match_parent"
@@ -135,7 +138,6 @@
 
 
         </LinearLayout>
-
 
 
     </RelativeLayout>
