--- a/mobile/src/main/res/layout/tab_fragment_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_eventos.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="Lo sentimos, aún no disponemos de ningún evento con esas características" />
+            android:text="@string/lo_sentimos" />
 
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
