--- a/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
@@ -25,7 +25,7 @@
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Aún no te has suscrito a ningún evento" />
+        android:text="@string/sin_suscripcion" />
 
     </RelativeLayout>
 </android.support.v4.widget.SwipeRefreshLayout>
