--- a/mobile/src/main/res/layout/activity_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/activity_pantalla_principal.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     tools:openDrawer="start"
-    android:background="@color/verdeFondo"
+    android:background="@color/windowBackgraound"
     >
 
     <include
