--- a/mobile/src/main/res/layout/activity_crear_evento.xml
+++ b/mobile/src/main/res/layout/activity_crear_evento.xml
@@ -1,7 +1,9 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/ScrollView01"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+    android:layout_height="fill_parent"
+    android:background="@color/windowBackgraound">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,7 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
-                android:hint="@string/deporte"/>
+                android:hint="@string/deporte"
+                android:textColor="@color/textColorPrimary" />
 
 
         </LinearLayout>
@@ -35,12 +38,14 @@
 
             <android.support.v7.widget.CardView
                 android:id="@+id/crear_buscador_mapa"
-                android:layout_width="300dp"
+                android:layout_width="280dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp">
+                android:layout_marginTop="5dp"
+                android:textColor="@color/textColorPrimary"
+                app:cardBackgroundColor="@color/windowBackgraound">
 
                 <fragment
                     android:id="@+id/place_autocomplete_fragment"
@@ -49,15 +54,13 @@
                     android:layout_height="match_parent" />
             </android.support.v7.widget.CardView>
 
-            <Button
+            <android.support.design.widget.FloatingActionButton
                 android:id="@+id/mostraMapa"
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="0.5"
-                android:background="@drawable/maps_icon"
-                android:paddingLeft="5dp" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:src="@drawable/ic_location_on_black_24dp"
+                android:tint="@color/iconsTint" />
 
 
         </LinearLayout>
@@ -72,7 +75,6 @@
             android:paddingRight="5dp">
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:map="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:id="@+id/map"
                 android:name="com.google.android.gms.maps.SupportMapFragment"
@@ -88,57 +90,220 @@
             android:layout_margin="5dp"
             android:orientation="vertical">
 
-            <EditText
-                android:id="@+id/crear_tipo"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:hint="Interior/Exterior" />
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/crear_coste"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:hint="@string/precio"
-                android:inputType="numberDecimal" />
+                <CheckBox
+                    android:id="@+id/crear_check_precio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:text="Este evento tiene un coste"
+                    android:textColor="@color/textColorPrimary" />
 
+                <EditText
+                    android:id="@+id/crear_coste"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="6"
+                    android:hint="@string/precio"
+                    android:textAlignment="center"
+                    android:inputType="numberDecimal"
+                    android:textColor="@color/textColorPrimary" />
 
-            <EditText
-                android:id="@+id/crear_fecha"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:inputType="date"
-                android:onClick="showDatePickerDialog" />
+            </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/crear_hora"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:inputType="time"
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
-                android:onClick="showTimePickerDialog" />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_date_range_black_24dp"
+                        android:tint="@color/colorAccent" />
+
+                    <TextView
+                        android:id="@+id/crear_texto_fecha"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:hint="@string/fecha"
+                        android:textColorHint="@color/textColorPrimary" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/ic_reloj"
+                        android:tint="@color/colorAccent" />
+
+                    <TextView
+                        android:id="@+id/crear_texto_hora"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:hint="@string/hora"
+                        android:textColorHint="@color/textColorPrimary" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/crear_fecha"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:inputType="date"
+                        android:onClick="showDatePickerDialog"
+                        android:textAlignment="center"
+                        android:textColor="@color/textColorPrimary" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="left"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/crear_hora"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="4"
+                        android:inputType="time"
+                        android:onClick="showTimePickerDialog"
+                        android:textAlignment="center"
+                        android:textColor="@color/textColorPrimary" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingRight="8dp"
+                    android:src="@drawable/ic_insert_comment_black_24dp"
+                    android:tint="@color/colorAccent" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:hint="@string/comentario"
+                    android:textColorHint="@color/textColorPrimary"
+                    android:textSize="15dp" />
+            </LinearLayout>
 
             <EditText
                 android:id="@+id/crear_comentario"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="4"
-                android:hint="@string/comentario" />
-
-            <Button
-                android:id="@+id/crear_aceptar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
-                android:text="@string/aceptar" />
+                android:ems="10"
+                android:hint="@string/esqcribaAqui"
+                android:inputType="textMultiLine"
+                android:textColor="@color/textColorPrimary" />
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp">
 
+                <CheckBox
+                    android:id="@+id/crear_checkBox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="4"
+                    android:buttonTint="@color/colorAccent"
+                    android:text=" "
+                    android:textColor="@color/textColorPrimary" />
+
+                <TextView
+                    android:id="@+id/crear_terminos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="7dp"
+                    android:layout_toRightOf="@id/crear_checkBox"
+                    android:clickable="true"
+                    android:onClick="onClick"
+                    android:text="@string/terminos_condiciones"
+                    android:textColor="@color/textColorPrimary"
+                    android:textStyle="" />
+            </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:orientation="horizontal" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/crear_aceptar"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/colorAccent"
+                        android:text="@string/aceptar"
+                        android:textColor="@color/iconsTint" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center"
+                    android:layout_weight="2"
+                    android:orientation="horizontal" />
+
+            </LinearLayout>
         </LinearLayout>
-
 
     </RelativeLayout>
 </ScrollView>
