--- a/mobile/src/main/res/layout/tab_fragment_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_eventos.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/refrescar_eventos"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pantallas.Principal"
     android:background="@color/windowBackgraound">
 
-    <RelativeLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refrescar_eventos"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,13 +17,14 @@
             android:dividerHeight="2dp"
             android:divider="@color/divider"/>
 
+    </android.support.v4.widget.SwipeRefreshLayout>
         <TextView
             android:id="@+id/empty"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="@string/lo_sentimos" />
+            android:text="@string/lo_sentimos"
+            android:textColor="@color/textColorPrimary"/>
 
     </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
