--- a/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
+++ b/mobile/src/main/res/layout/tab_fragment_mis_eventos.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/refrescar_mis_eventos"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Pantallas.Principal"
     android:background="@color/windowBackgraound">
 
-    <RelativeLayout
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/refrescar_mis_eventos"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <ListView
-        android:id="@+id/listaMisEventos"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="2dp"
-        android:divider="@color/divider" />
+        <ListView
+            android:id="@+id/listaMisEventos"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:divider="@color/divider"
+            android:dividerHeight="2dp" />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
     <TextView
         android:id="@+id/empty_mis"
-        android:layout_gravity="center"
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/sin_suscripcion" />
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="@string/sin_suscripcion"
+        android:textColor="@color/textColorPrimary"/>
 
-    </RelativeLayout>
-</android.support.v4.widget.SwipeRefreshLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/boton_anadir_partidos"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="@dimen/fab_margin"
+        android:tint="@color/iconsTint"
+        app:srcCompat="@android:drawable/ic_input_add" />
+
+</RelativeLayout>
