--- a/mobile/src/main/res/layout/ficha_eventos.xml
+++ b/mobile/src/main/res/layout/ficha_eventos.xml
@@ -38,9 +38,9 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/evento_deporte"
             android:layout_marginRight="60dp"
+            android:text="A Coruña"
             android:textColor="@color/textColorPrimary"
-            android:textSize="18dp"
-            android:text="A Coruña"/>
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/evento_ubicacion"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/evento_ubicacion"
-            android:text="@string/coste_por_jugador"
+            android:text="@string/coste_por_participante"
             android:textColor="@color/textColorSeconary"
             android:textSize="15dp" />
 
@@ -101,18 +101,20 @@
         android:descendantFocusability="blocksDescendants"
         android:orientation="vertical"
         android:visibility="gone">
+
         <TextView
             android:id="@+id/evento_texto_informacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/textColorPrimary"
             android:text="@string/informacion"
+            android:textColor="@color/textColorPrimary"
             android:textSize="15dp" />
+
         <TextView
             android:id="@+id/evento_informacion"
-            android:layout_below="@+id/evento_texto_informacion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/evento_texto_informacion"
             android:textColor="@color/textColorSeconary"
             android:textSize="15dp" />
 
@@ -120,10 +122,11 @@
             android:id="@+id/evento_mapa"
             android:layout_width="fill_parent"
             android:layout_height="250dp"
-            android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginTop="5dp"
             android:clickable="true"
             android:visibility="gone" />
+
         <LinearLayout
             android:id="@+id/evento_opciones"
             android:layout_width="wrap_content"
@@ -145,40 +148,43 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_borrar"
-                android:tint="@color/iconsTint"
-                />
+                android:tint="@color/iconsTint" />
+
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/compartir_but"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:src="@drawable/ic_compartir"
-                android:tint="@color/iconsTint"
-                />
+                android:tint="@color/iconsTint" />
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="right">
-            <TextView
-                android:id="@+id/crear_comentarios"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/comentarios"
-                android:textColor="@color/textColorPrimary"
-                android:paddingRight="10dp"
-                android:paddingLeft="10dp"
-                android:paddingBottom="10dp"
-                android:layout_gravity="bottom"/>
-            <TextView
-                android:id="@+id/crear_participantes"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/participantes"
-                android:textColor="@color/textColorPrimary"
-                android:layout_gravity="bottom"
-                android:layout_marginRight="5dp"
-                android:paddingBottom="10dp"/>
+                android:layout_gravity="right"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/ver_comentarios"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:paddingBottom="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="@string/comentarios"
+                    android:textColor="@color/textColorPrimary" />
+
+                <TextView
+                    android:id="@+id/ver_participantes"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginRight="5dp"
+                    android:paddingBottom="10dp"
+                    android:text="@string/participantes"
+                    android:textColor="@color/textColorPrimary" />
+
             </LinearLayout>
 
         </LinearLayout>
