--- a/mobile/src/main/res/layout/activity_crear_evento.xml
+++ b/mobile/src/main/res/layout/activity_crear_evento.xml
@@ -8,20 +8,22 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginRight="5dp"
+        android:layout_marginLeft="5dp">
 
         <LinearLayout
             android:id="@+id/primera"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="vertical">
 
             <AutoCompleteTextView
                 android:id="@+id/crear_deporte"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="4"
                 android:hint="@string/deporte"
                 android:textColor="@color/textColorPrimary" />
 
@@ -33,17 +35,14 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:layout_below="@+id/primera"
-            android:layout_margin="5dp"
             android:orientation="horizontal">
 
             <android.support.v7.widget.CardView
                 android:id="@+id/crear_buscador_mapa"
                 android:layout_width="280dp"
                 android:layout_height="match_parent"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:paddingTop="5dp"
+                android:paddingBottom="5dp"
                 android:textColor="@color/textColorPrimary"
                 app:cardBackgroundColor="@color/windowBackgraound">
 
@@ -51,7 +50,7 @@
                     android:id="@+id/place_autocomplete_fragment"
                     android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                     android:layout_width="fill_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"/>
             </android.support.v7.widget.CardView>
 
             <android.support.design.widget.FloatingActionButton
@@ -62,7 +61,6 @@
                 android:src="@drawable/ic_location_on_black_24dp"
                 android:tint="@color/iconsTint" />
 
-
         </LinearLayout>
 
         <LinearLayout
@@ -70,9 +68,9 @@
             android:layout_width="fill_parent"
             android:layout_height="350dp"
             android:layout_below="@+id/segunda"
-            android:orientation="vertical"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp">
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:orientation="vertical">
 
             <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
@@ -84,37 +82,42 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/layoutPrecio"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mapa"
-            android:layout_margin="5dp"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/crear_check_precio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:buttonTint="@color/colorAccent"
+                android:text="@string/evento_coste"
+                android:textColor="@color/textColorPrimary" />
+
+            <EditText
+                android:id="@+id/crear_coste"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="6"
+                android:hint="@string/precio"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+                android:textColor="@color/textColorPrimary" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/contenido"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/layoutPrecio"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <CheckBox
-                    android:id="@+id/crear_check_precio"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:buttonTint="@color/colorAccent"
-                    android:text="Este evento tiene un coste"
-                    android:textColor="@color/textColorPrimary" />
-
-                <EditText
-                    android:id="@+id/crear_coste"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="6"
-                    android:hint="@string/precio"
-                    android:textAlignment="center"
-                    android:inputType="numberDecimal"
-                    android:textColor="@color/textColorPrimary" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -207,10 +210,54 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <RadioGroup
+                android:id="@+id/crear_privacidad"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
+
+                <RadioButton
+                    android:id="@+id/crear_publico"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:checked="true"
+                    android:text="@string/publico"
+                    android:textColor="@color/textColorPrimary" />
+
+                <RadioButton
+                    android:id="@+id/crear_privado"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:text="@string/privado"
+                    android:textColor="@color/textColorPrimary" />
+
+                <RadioButton
+                    android:id="@+id/crear_restringido"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:buttonTint="@color/colorAccent"
+                    android:text="@string/restringido"
+                    android:textColor="@color/textColorPrimary" />
+
+            </RadioGroup>
+
+            <TextView
+                android:id="@+id/crear_texto_privacidad"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/textColorSeconary" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="15dp"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -238,71 +285,74 @@
                 android:inputType="textMultiLine"
                 android:textColor="@color/textColorPrimary" />
 
-            <RelativeLayout
-                android:layout_width="match_parent"
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/layoutCondiciones"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_below="@+id/contenido">
+
+            <CheckBox
+                android:id="@+id/crear_checkBox"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp">
+                android:layout_weight="4"
+                android:buttonTint="@color/colorAccent"
+                android:text=" "
+                android:textColor="@color/textColorPrimary" />
 
-                <CheckBox
-                    android:id="@+id/crear_checkBox"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_weight="4"
-                    android:buttonTint="@color/colorAccent"
-                    android:text=" "
-                    android:textColor="@color/textColorPrimary" />
+            <TextView
+                android:id="@+id/crear_terminos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="7dp"
+                android:layout_toRightOf="@id/crear_checkBox"
+                android:clickable="true"
+                android:onClick="onClick"
+                android:text="@string/terminos_condiciones"
+                android:textColor="@color/textColorPrimary"
+                android:textStyle="" />
+        </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/crear_terminos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:layout_toRightOf="@id/crear_checkBox"
-                    android:clickable="true"
-                    android:onClick="onClick"
-                    android:text="@string/terminos_condiciones"
-                    android:textColor="@color/textColorPrimary"
-                    android:textStyle="" />
-            </RelativeLayout>
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="horizontal"
+            android:layout_below="@+id/layoutCondiciones">
 
             <LinearLayout
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:orientation="horizontal" />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/crear_aceptar"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/colorAccent"
-                        android:text="@string/aceptar"
-                        android:textColor="@color/iconsTint" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="fill_parent"
-                    android:layout_gravity="center"
-                    android:layout_weight="2"
-                    android:orientation="horizontal" />
-
+                <Button
+                    android:id="@+id/crear_aceptar"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorAccent"
+                    android:text="@string/aceptar"
+                    android:textColor="@color/iconsTint" />
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:orientation="horizontal" />
+
         </LinearLayout>
 
     </RelativeLayout>
