--- a/mobile/src/main/res/layout/lista_comentarios.xml
+++ b/mobile/src/main/res/layout/lista_comentarios.xml
@@ -8,16 +8,18 @@
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/refrescar_comentarios"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_above="@+id/comentarios">
 
         <ListView
             android:id="@+id/listaComentarios"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:dividerHeight="2dp"
-            android:divider="@color/divider"/>
+            android:divider="@color/divider"
+            android:dividerHeight="0dp" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
     <TextView
         android:id="@+id/empty"
         android:layout_width="match_parent"
@@ -25,6 +27,36 @@
         android:layout_gravity="center"
         android:gravity="center"
         android:text="@string/no_comentarios"
-        android:textColor="@color/textColorPrimary"/>
+        android:textColor="@color/textColorPrimary" />
+
+    <RelativeLayout
+        android:id="@+id/comentarios"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/linea"
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="@color/divider" />
+
+            <EditText
+                android:id="@+id/escribir_comentario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:drawableRight="@drawable/ic_send"
+                android:drawableTint="@color/colorAccent"
+                android:hint="@string/escribe_comentario"
+                android:textColor="@color/textColorPrimary"
+                android:inputType="textMultiLine|textCapSentences"
+
+                />
+
+
+    </RelativeLayout>
 
 </RelativeLayout>
