--- a/mobile/src/main/res/layout/ficha_usuarios.xml
+++ b/mobile/src/main/res/layout/ficha_usuarios.xml
@@ -28,11 +28,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/imagenUsuario"
-            android:paddingLeft="20dp"
-            android:textColor="@color/textColorPrimary"
-            android:textSize="18dp"
             android:gravity="center_vertical"
-            android:paddingTop="10dp"/>
+            android:paddingLeft="20dp"
+            android:paddingTop="10dp"
+            android:textColor="@color/textColorPrimary"
+            android:textSize="18dp" />
+
+        <TextView
+            android:id="@+id/textViewAdmin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/textViewNombreUsuario"
+            android:layout_toRightOf="@+id/imagenUsuario"
+            android:gravity="center_vertical"
+            android:paddingLeft="20dp"
+            android:paddingTop="2dp"
+            android:textColor="@color/textColorSeconary"
+            android:textSize="13dp" />
     </RelativeLayout>
 
 </RelativeLayout>
