--- a/mobile/src/main/res/layout/lista_comentarios.xml
+++ b/mobile/src/main/res/layout/lista_comentarios.xml
@@ -24,6 +24,7 @@
         android:id="@+id/empty"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_margin="10dp"
         android:layout_gravity="center"
         android:gravity="center"
         android:text="@string/no_comentarios"
