--- a/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
+++ b/mobile/src/main/res/menu/activity_pantalla_principal_drawer.xml
@@ -27,9 +27,9 @@
                 android:icon="@drawable/ic_menu_share"
                 android:title="Share" />
             <item
-                android:id="@+id/nav_send"
+                android:id="@+id/nav_salir"
                 android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:title="@string/action_exit" />
         </menu>
     </item>
 
