--- a/mobile/src/main/res/layout/activity_login.xml
+++ b/mobile/src/main/res/layout/activity_login.xml
@@ -124,7 +124,7 @@
                         android:layout_height="40dp"
                         android:background="@drawable/boton_redondo_accent"
                         android:text="@string/iniciar_sesion"
-                        android:textColor="@color/textColorPrimary" />
+                        android:textColor="@color/iconsTint" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
