--- a/mobile/src/main/res/layout/nav_header_pantalla_principal.xml
+++ b/mobile/src/main/res/layout/nav_header_pantalla_principal.xml
@@ -19,7 +19,8 @@
         android:layout_width="64dp"
         android:layout_height="64dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@android:drawable/sym_def_app_icon" />
+        app:srcCompat="@android:drawable/sym_def_app_icon"
+        />
 
     <TextView
         android:id="@+id/textViewNombreUsuario"
